# jphrase

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yaml  publish-to-pypi.yml  python-app.yml
docs/source/: conf.py  index.rst  jphrase.rst  modules.rst
src/jphrase/: __init__.py  phrase_splitter.py
tests/: test_phrase_splitter.py
